fix bug, add setting.html

--- a/nhom-7/1-2-about.html
+++ b/nhom-7/1-2-about.html
@@ -7,7 +7,8 @@
     <title>TinyCards -- Flash Cards by Duolingo</title>
     <link rel="shortcut icon" type="image/png" href="https://d17u0960v8a9bp.cloudfront.net/image/5c826d3d048819c3fc25ddaea0697433.png"
     />
-    <!-- <link rel="stylesheet" href="css/about.css"> -->
+    <link rel="stylesheet" href="css/about.css">
+    
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <script src="bootstrap/jquery.min.js"></script>
     <script src="bootstrap/bootstrap.min.js"></script>
